# AviasalestTicketCheckerBot

./: .gitignore  .pre-commit-config.yaml  Pipfile  README.md  alembic.ini  pyproject.toml  requirements.txt  start_bot.sh
air_bot/: app.py  config.py  db_connector.py  http_session.py  main.py  service.py  settings.ini  settings.py
air_bot/adapters/: locations_api.py  orm.py  repository.py  tickets_api.py
air_bot/adapters/repo/: flight_direction.py  flight_directions.py  orm.py  session_maker.py  tickets.py  uow.py  users.py  users_directions.py  users_repo.py
air_bot/bot/: i18n.py  service.py
air_bot/bot/handlers/: add_flight_direction.py  admin.py  low_prices_calendar.py  start.py  user_profile.py
air_bot/bot/keyboards/: add_flight_direction_kb.py  choose_location_kb.py  choose_month_kb.py  direct_or_transfer_kb.py  low_prices_calendar_kb.py  user_home_kb.py  user_profile_kb.py  with_or_without_return_kb.py  with_or_without_transfer_kb.py
air_bot/bot/locales/: en.yaml  ru.yaml
air_bot/bot/middlewares/: add_calendar_view.py  add_http_session_maker.py  add_locations_api.py  add_session_maker.py  add_settings_storage.py  add_ticket_view.py  add_tickets_service.py  add_translator_middleware.py  depends.py
air_bot/bot/presentation/: directions.py  low_price_calendar.py  tickets.py  utils.py
air_bot/bot/utils/: date.py  validation.py
air_bot/domain/: direction_tracker.py  exceptions.py  model.py  repository.py
air_bot/domain/ports/: repository.py  user_notifier.py
air_bot/graceful_shutdown/: delayed_keyboard_interrupt.py  service.py
air_bot/service/: direction_updater.py  scheduler.py  tickets_service.py  unit_of_work.py  user.py  users_service.py
air_bot/service_layer/: tickets_service.py  unit_of_work.py  users_service.py
alembic/: env.py
alembic/versions/: 2023_06_12-8e58cb45a732_init.py  2023_06_20-39b4772ce6ca_init.py  2023_06_21-81984bb2b857_init.py  2023_06_23-79ef2c9e4933_add_tickets.py  2023_06_24-c4a061ec9b20_init.py  2023_07_07-2f4a080dd8fc_init.py  2023_07_07-35c6bd819b9f_init.py  2023_12_02-be7ee81e006c_add_last_update_try_column.py
src/: air_bot.sql
src/air_bot/: aiohttp_logging.py  air_bot_app.py  bot.py  bot_types.py  db.py  main.py  scheduler.py
src/air_bot/aviasales_api/: api_layer.py  grouped_prices.py  locations_api.py  tickets_api.py
src/air_bot/checker/: conf.ini  conf.py  ticket_price_checker.py
src/air_bot/db/: db_manager.py  mapping.py
src/air_bot/delayed_keyboard_interrupt/: __init__.py
src/air_bot/handlers/: add_flight_direction.py  low_prices_calendar.py  start.py  user_profile.py
src/migrations/: 001__price_can_be_null.sql
tests/: conftest.py  db_manager_for_tests.py  test_reading_date.py  test_ticket_price_checker.py
tests/handlers/: test_add_flight_direction.py
tests/integration/: conftest.py  test_flight_direction_repo.py  test_uow.py  test_users_directions_repo.py
tests/ui/: bot_config.py  conftest.py  test_low_prices_calendar.py
tests/unit/: fakes.py  test_direction_updater.py  test_settings_storage.py  test_tickets_service.py
(+24 files in other folders)
