[tool.poetry]
name = "air-bot"
version = "1.0.0"
description = ""
authors = ["Denis Sleptsov <hurrdurrrderp@gmail.com>"]
packages = [{include = "air_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = {version = "^2.0.15", extras = ["asyncio"]}
asyncmy = "^0.2.8"
cryptography = "^41.0.1"
alembic = "^1.11"
python-dotenv = "^1.0.0"
pydantic = {version = "^1.10", extras = ["dotenv"]}
aiohttp = "^3.8.4"
async-timeout = "^4.0.2"
loguru = "^0.7.0"
aiogram = "3.0.0b4"
babel = "^2.12.1"
pyyaml = "^6.0"
apscheduler = "4.0.0a2"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pytest = "^7.3.1"
mypy = "^1.3.0"
black = "^23.3.0"
isort = "^5.12.0"
pre-commit = "^3.3.2"
pytest-asyncio = "^0.21.0"
flake8-pyproject = "^1.2.3"
pytest-unordered = "^0.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
# Ignore 'line too long'
ignore = ['E501']

[tool.isort]
profile = "black"