[tool.poetry]
name = "air-bot"
version = "1.0.0"
description = ""
authors = ["Denis Sleptsov <hurrdurrrderp@gmail.com>"]
packages = [{include = "air_bot"}]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
asyncmy = "^0.2.9"
cryptography = "^43.0.3"
alembic = "^1.13.3"
python-dotenv = "^1.0.1"
aiohttp = "^3.10.10"
attrs = "^24.2.0"
frozenlist = "^1.5.0"
multidict = "^6.1.0"
yarl = "==1.15.*"
loguru = "^0.7.2"
apscheduler = "4.0.0a2"
pydantic = "2.8"
pydantic-settings = "^2.6.1"
aiogram = "==3.13.*"
babel = "^2.16.0"
pyyaml = "^6.0.2"


[tool.poetry.group.dev.dependencies]
flake8 = "==6.0.*"
black = "==22.*"
pytest = "^8.3.3"
mypy = "^1.13.0"
isort = "^5.13.2"
types-pyyaml = "^6.0.12.20240917"
pytest-unordered = "^0.6.1"
pre-commit = "==3.1.*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
# Ignore 'line too long'
ignore = ['E501','W293']

[tool.isort]
profile = "black"